Add vi copy mode in tmux/Ignore common in history

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,3 +21,12 @@ bind -n M-i setw synchronize-panes
 # change colors to help focus on pane in use
 set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250,bg=black'
+
+# use vim keybindings in copy mode
+setw -g mode-keys vi
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel clip.exe
