Update bindings for copy/paste buffer in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@
 set -g status-keys vi
 # make tmux not wait for a character after escape (annoying when using vi)
 set -s escape-time 0
+# increas history limit
+set -g history-limit 10000
 
 # set paning
 unbind %
@@ -24,7 +26,8 @@ set -g window-active-style 'fg=colour250,bg=black'
 
 # use vim keybindings in copy mode
 setw -g mode-keys vi
-bind P paste-buffer
+bind -n M-c copy-mode
+bind -n M-p paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
