--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ bind -n M-[ select-pane -L
 bind -n M-] select-pane -R
 # toggle maximize pane
 bind -n M-u resize-pane -Z
+# disable/enable pane
+bind -n M-d select-pane -d
+bind -n M-e select-pane -e
 # broadcast to all panes
 bind -n M-i setw synchronize-panes
 # change colors to help focus on pane in use
